--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,152 @@
-.App {
-  text-align: center;
+html,
+body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  background: #19191a;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.active {
+  font-weight: bold;
+  color: #007bff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.carousel {
+  margin: 20px auto;
+  width: 97vw;
   display: flex;
-  flex-direction: column;
+}
+
+.carousel-left {
+  width: 50%;
+}
+
+
+.carousel-right {
+  height: 90vh;
+  width: 50%;
+}
+
+/* Navbar CSS */
+.navbar {
+  background-color: azure;
+  display: grid;
+  grid-template-columns: 20px 2fr 1fr 7fr 20px;
+}
+
+.logo-name h3 span {
+  color: blue;
+}
+
+.ul-secction {
+  grid-column: 4/5;
+}
+
+.logo-section {
+  grid-column: 2/3;
+  font-family: 'Roboto Slab', serif;
+  display: flex;
   align-items: center;
+  padding: 4px;
+  cursor: pointer;
+}
+
+.ul-secction ul {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.ul-secction ul li {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+li {
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.dots {
+  display: inline-block;
+  line-height: 20px;
+  text-decoration: none;
+  font-family: 'Roboto Slab', serif;
+  margin: 0px 5px;
+  font-size: 1.2rem;
+  color: black;
+  width: 100%;
+  height: 100%;
+}
+
+.dots:hover {
+  color: blue;
+}
+
+/* hamburger icon  */
+.hamburger {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+  display: none;
+  grid-column: 4/5;
+}
+
+.line {
+  height: 5px;
+  width: 33px;
+  background-color: #283462;
+  margin: 3px 5px;
+  border-radius: 5px;
+}
+
+/* drop down meanu css  */
+.drop {
+  background-color: yellowgreen;
+  position: relative;
+  display: none;
+  z-index: 1;
+}
+
+.drop ul {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 110px;
+  margin: 1px 5px;
+  background-color: azure;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.drop ul li {
+  padding: 10px;
+  text-align: center;
+  border-bottom: 1px solid #ccc;
+}
+
+.d-flex {
+  display: flex;
+}
+
+/* navbar css for responsivenes  */
+@media screen and (max-width: 836px) {
+  .navbar {
+    grid-template-columns: 20px 5fr 7fr 1fr 20px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .dots {
+    font-size: 20px;
+    margin: 0px 2px;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+  .ul-secction {
+    display: none;
   }
 }
